--- a/LicenseDiscovery/src/main/resources/application.properties
+++ b/LicenseDiscovery/src/main/resources/application.properties
@@ -10,3 +10,7 @@ example.property=<some_value>
 
 management.endpoints.web.exposure.include=*
 management.endpoints.enabled-by-default=true
+
+#spring.kafka.bootstrap-servers=localhost:9092
+#spring.kafka.consumer.group-id=pos_team
+#kafka.topic=microservice_topic
