--- a/LicenseDiscovery/pom.xml
+++ b/LicenseDiscovery/pom.xml
@@ -82,6 +82,10 @@
             <artifactId>resilience4j-circuitbreaker</artifactId>
             <version>2.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
 
 
         <dependency>
