--- a/LicenseDiscovery/src/main/resources/application.yml
+++ b/LicenseDiscovery/src/main/resources/application.yml
@@ -27,5 +27,9 @@ resilience4j:
         max-wait-duration:
           nanos: 100000
 
-
+spring:
+  kafka:
+    bootstrap-servers: localhost:9092
+    consumer:
+      group-id: pos_team
 
