--- a/LicenseDiscovery/src/main/resources/application.yml
+++ b/LicenseDiscovery/src/main/resources/application.yml
@@ -32,4 +32,8 @@ spring:
     bootstrap-servers: localhost:9092
     consumer:
       group-id: pos_team
-
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
